fix(subscription): optimize expiration scheduler index and fan-out