@@ -16,16 +16,26 @@
 package io.gravitee.rest.api.services.subscriptionpreexpirationnotif;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.ArgumentMatchers.anyInt;
+import static org.mockito.ArgumentMatchers.anyList;
+import static org.mockito.ArgumentMatchers.anyLong;
+import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.*;
 
+import io.gravitee.apim.core.subscription.model.ExpiringSubscription;
+import io.gravitee.apim.core.subscription.query_service.SubscriptionQueryService;
 import io.gravitee.rest.api.model.*;
 import io.gravitee.rest.api.model.api.ApiEntity;
 import io.gravitee.rest.api.model.key.ApiKeyQuery;
-import io.gravitee.rest.api.model.subscription.SubscriptionQuery;
 import io.gravitee.rest.api.service.*;
 import io.gravitee.rest.api.service.builder.EmailNotificationBuilder;
 import io.gravitee.rest.api.service.common.GraviteeContext;
+import io.gravitee.rest.api.service.v4.ApiSearchService;
+import io.gravitee.rest.api.service.v4.PlanSearchService;
+import java.lang.reflect.Field;
 import java.time.Instant;
+import java.time.ZoneOffset;
+import java.time.ZonedDateTime;
 import java.util.*;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -46,10 +56,22 @@ class ScheduledSubscriptionPreExpirationNotificationServiceTest {
     SubscriptionService subscriptionService;
 
     @Mock
+    SubscriptionQueryService subscriptionQueryService;
+
+    @Mock
     ApiKeyService apiKeyService;
 
     @Mock
     EmailService emailService;
+
+    @Mock
+    ApiSearchService apiSearchService;
+
+    @Mock
+    PlanSearchService planSearchService;
+
+    @Mock
+    ApplicationService applicationService;
 
     @Test
     void shouldCleanNotificationDays() {
@@ -60,33 +82,80 @@ class ScheduledSubscriptionPreExpirationNotificationServiceTest {
     }
 
     @Test
-    void shouldFindSubscriptionExpirationsToNotify() {
-        Instant now = Instant.ofEpochMilli(1469022010000L);
-        Integer daysBeforeNotification = 10;
+    void shouldQueryExpiringSubscriptionsOnceRegardlessOfScheduleLength() throws Exception {
+        setNotificationDays(List.of(90, 45, 30));
+        when(subscriptionQueryService.findExpiringSubscriptions(any(Instant.class), anyList(), anyLong(), anyList())).thenReturn(List.of());
 
-        SubscriptionEntity subscription = mock(SubscriptionEntity.class);
+        service.run();
 
-        when(subscriptionService.search(eq(GraviteeContext.getExecutionContext()), any(SubscriptionQuery.class))).thenReturn(
-            Collections.singletonList(subscription)
+        verify(subscriptionQueryService, times(1)).findExpiringSubscriptions(
+            any(Instant.class),
+            eq(List.of(90, 45, 30)),
+            anyLong(),
+            eq(List.of(SubscriptionStatus.ACCEPTED, SubscriptionStatus.PAUSED))
+        );
+    }
+
+    @Test
+    void shouldBucketSubscriptionsByLargestMatchingDay() throws Exception {
+        setNotificationDays(List.of(90, 45, 30));
+
+        // run() uses Instant.now() internally — build endingAts relative to wall clock so they land in the cron-hour window.
+        ZonedDateTime ending30 = ZonedDateTime.now().plusDays(30).plusMinutes(5);
+        ZonedDateTime ending45 = ZonedDateTime.now().plusDays(45).plusMinutes(5);
+        ZonedDateTime ending90 = ZonedDateTime.now().plusDays(90).plusMinutes(5);
+
+        ExpiringSubscription sub30 = new ExpiringSubscription("s30", "api1", "plan1", "app1", "user1", ending30, null);
+        ExpiringSubscription sub45 = new ExpiringSubscription("s45", "api1", "plan1", "app1", "user1", ending45, null);
+        ExpiringSubscription sub90 = new ExpiringSubscription("s90", "api1", "plan1", "app1", "user1", ending90, null);
+
+        when(subscriptionQueryService.findExpiringSubscriptions(any(Instant.class), anyList(), anyLong(), anyList())).thenReturn(
+            List.of(sub30, sub45, sub90)
         );
 
-        Collection<SubscriptionEntity> subscriptionsToNotify = service.findSubscriptionExpirationsToNotify(now, daysBeforeNotification);
+        when(userService.findById(eq(GraviteeContext.getExecutionContext()), eq("user1"))).thenReturn(mock(UserEntity.class));
+        ApplicationEntity app = mock(ApplicationEntity.class);
+        when(app.getPrimaryOwner()).thenReturn(mock(PrimaryOwnerEntity.class));
+        when(applicationService.findById(any(), eq("app1"))).thenReturn(app);
 
-        assertThat(subscriptionsToNotify).isEqualTo(Collections.singletonList(subscription));
+        service.run();
 
-        verify(subscriptionService, times(1)).search(
-            eq(GraviteeContext.getExecutionContext()),
-            argThat(
-                subscriptionQuery ->
-                    Arrays.asList(SubscriptionStatus.ACCEPTED, SubscriptionStatus.PAUSED).equals(subscriptionQuery.getStatuses()) &&
-                    // 1469886010000 -> now + 10 days
-                    subscriptionQuery.getEndingAtAfter() ==
-                    1469886010000L &&
-                    // 1469889610000 -> now + 10 days + 1h (cron period)
-                    subscriptionQuery.getEndingAtBefore() ==
-                    1469889610000L
-            )
+        verify(subscriptionService, times(1)).updateDaysToExpirationOnLastNotification("s30", 30);
+        verify(subscriptionService, times(1)).updateDaysToExpirationOnLastNotification("s45", 45);
+        verify(subscriptionService, times(1)).updateDaysToExpirationOnLastNotification("s90", 90);
+        verify(subscriptionService, times(3)).updateDaysToExpirationOnLastNotification(anyString(), anyInt());
+    }
+
+    @Test
+    void bucketingIsInclusiveAtLowerBoundExclusiveAtUpperBound() throws Exception {
+        setNotificationDays(List.of(30));
+
+        Instant now = Instant.ofEpochMilli(1_700_000_000_000L);
+        long oneDay = 24L * 60L * 60L * 1000L;
+        long oneHour = 60L * 60L * 1000L;
+        ZonedDateTime atLo = Instant.ofEpochMilli(now.toEpochMilli() + 30 * oneDay).atZone(ZoneOffset.UTC);
+        ZonedDateTime justInsideHi = Instant.ofEpochMilli(now.toEpochMilli() + 30 * oneDay + oneHour - 1).atZone(ZoneOffset.UTC);
+        ZonedDateTime atHi = Instant.ofEpochMilli(now.toEpochMilli() + 30 * oneDay + oneHour).atZone(ZoneOffset.UTC);
+        ZonedDateTime justBeforeLo = Instant.ofEpochMilli(now.toEpochMilli() + 30 * oneDay - 1).atZone(ZoneOffset.UTC);
+
+        ExpiringSubscription subAtLo = new ExpiringSubscription("at-lo", "a", "p", "ap", "u", atLo, null);
+        ExpiringSubscription subJustInsideHi = new ExpiringSubscription("just-inside-hi", "a", "p", "ap", "u", justInsideHi, null);
+        ExpiringSubscription subAtHi = new ExpiringSubscription("at-hi", "a", "p", "ap", "u", atHi, null);
+        ExpiringSubscription subJustBeforeLo = new ExpiringSubscription("just-before-lo", "a", "p", "ap", "u", justBeforeLo, null);
+
+        when(subscriptionQueryService.findExpiringSubscriptions(eq(now), anyList(), anyLong(), anyList())).thenReturn(
+            List.of(subAtLo, subJustInsideHi, subAtHi, subJustBeforeLo)
         );
+
+        var buckets = service.bucketExpiringSubscriptions(now);
+
+        assertThat(buckets.get(30)).extracting(ExpiringSubscription::id).containsExactly("at-lo", "just-inside-hi");
+    }
+
+    private void setNotificationDays(List<Integer> days) throws Exception {
+        Field f = ScheduledSubscriptionPreExpirationNotificationService.class.getDeclaredField("notificationDays");
+        f.setAccessible(true);
+        f.set(service, days);
     }
 
     @Test
@@ -94,9 +163,6 @@ class ScheduledSubscriptionPreExpirationNotificationServiceTest {
         String subscriberId = UUID.randomUUID().toString();
         UserEntity subscriber = mock(UserEntity.class);
         when(subscriber.getEmail()).thenReturn("subscriber@gravitee.io");
-
-        SubscriptionEntity subscription = mock(SubscriptionEntity.class);
-        when(subscription.getSubscribedBy()).thenReturn(subscriberId);
 
         when(userService.findById(GraviteeContext.getExecutionContext(), subscriberId)).thenReturn(subscriber);
 
@@ -106,7 +172,7 @@ class ScheduledSubscriptionPreExpirationNotificationServiceTest {
         ApplicationEntity application = mock(ApplicationEntity.class);
         when(application.getPrimaryOwner()).thenReturn(primaryOwner);
 
-        Collection<String> usersToNotify = service.findEmailsToNotify(subscription, application);
+        Collection<String> usersToNotify = service.findEmailsToNotify(subscriberId, application);
 
         Set<String> expected = new HashSet<>();
         expected.add("subscriber@gravitee.io");
@@ -120,9 +186,6 @@ class ScheduledSubscriptionPreExpirationNotificationServiceTest {
         UserEntity subscriber = mock(UserEntity.class);
         when(subscriber.getEmail()).thenReturn("primary_owner@gravitee.io");
 
-        SubscriptionEntity subscription = mock(SubscriptionEntity.class);
-        when(subscription.getSubscribedBy()).thenReturn(subscriberId);
-
         when(userService.findById(GraviteeContext.getExecutionContext(), subscriberId)).thenReturn(subscriber);
 
         PrimaryOwnerEntity primaryOwner = mock(PrimaryOwnerEntity.class);
@@ -131,7 +194,7 @@ class ScheduledSubscriptionPreExpirationNotificationServiceTest {
         ApplicationEntity application = mock(ApplicationEntity.class);
         when(application.getPrimaryOwner()).thenReturn(primaryOwner);
 
-        Collection<String> usersToNotify = service.findEmailsToNotify(subscription, application);
+        Collection<String> usersToNotify = service.findEmailsToNotify(subscriberId, application);
 
         Set<String> expected = new HashSet<>();
         expected.add("primary_owner@gravitee.io");
